<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="edittext_uri">https://youtu.be/8A3lmlRZbjU</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'I love yall guys subscribe to my Youtube channel</string>
    <string name="button_share">Share This Text</string>

</resources>